Added the frontpage

--- a/index.html
+++ b/index.html
@@ -1,9 +1,36 @@
-<!docktype HTML>
+<!DOCTYPE html>
 <html>
-<head>
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="initial-scale=1" />
+		<title>Main Page</title>
+		<link rel = "icon" type = "image/png" href ="https://avatars.githubusercontent.com/u/100360572?v=4" />
+		<link rel="stylesheet" href="style.css" type="text/css">
 
-</head>
-<body>
-	<h1>Hello!</h1>
-</body>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Bitter:wght@300&family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
+	</head>
+	<body>
+		<!--Header-->
+		<div class="header">
+			<!--Name-->
+			<div class="name">
+				<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+				<h3>Emil Bjørkeng</h3>
+			</div>
+			<!--Menu-->
+			<div class="menu">
+				<a href="" class="active">Home</a>
+				<a href="">About Me</a>
+				<a href="">Documentation</a>
+			</div>
+		</div>
+		<!--Banner-->
+		<div class="banner">
+			<h1>Student and freetime programmer</h1>
+		</div>
+		<h1 class="title">What I am or have worked on</h1>
+		<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit perferendis quo laborum deserunt expedita quis nesciunt itaque ut ducimus tenetur ea in optio corrupti vel mollitia harum, officia ad! Quod vitae aliquid odio nostrum quam enim in quidem maxime debitis molestiae labore aut earum corporis sed voluptates qui nisi maiores, totam nesciunt dolore. Quisquam cum molestias repellat eum nisi aperiam, est fugiat atque magni repudiandae non tempore facere, harum nulla maiores expedita. Provident consequatur optio harum aperiam, recusandae veritatis sint molestiae est culpa quae obcaecati mollitia doloribus? Aliquid veritatis quis, molestias doloribus saepe minus fugiat suscipit iste placeat ut perferendis necessitatibus autem laborum illo ipsum ab repellendus consequatur magni omnis, eius quidem magnam commodi nemo maiores. Illo dicta nulla officiis obcaecati possimus pariatur repellendus mollitia, aut sunt quam sint excepturi voluptate incidunt quae error alias omnis! Illo earum, autem perferendis architecto omnis excepturi quibusdam at quam ducimus nesciunt labore quisquam nemo aut eaque, aliquid repellendus atque voluptate ullam. In quas totam natus tenetur. Amet animi, quo repellat eveniet dolore repellendus provident perferendis? Minima quas consequatur at vero, harum, quo veniam ab dolores praesentium optio iure expedita labore! Omnis excepturi similique at vero illo obcaecati molestiae quaerat eaque, earum cum exercitationem.</p>
+	</body>
 </html>
