--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<!--Header-->
@@ -22,6 +22,7 @@
 			<!--Menu-->
 			<div class="menu">
 				<a href="" class="active">Home</a>
+				<a href="">Projects</a>
 				<a href="">About Me</a>
 				<a href="">Documentation</a>
 			</div>
@@ -73,6 +74,9 @@
 				</a>
 			</li>
 		</ul>
+		<div class="show-button">
+			<a href="">Show all projects</a>
+		</div>
 		<hr>
 		<div style="width: 100%; height: 600px;"></div>
 	</body>
