--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
+		<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+		
 	</head>
 	<body>
 		<!--Header-->
@@ -79,5 +81,18 @@
 		</div>
 		<hr>
 		<div style="width: 100%; height: 600px;"></div>
+		<div class="footer">
+			<span>Powered by: Me</span>
+			<small>I wrote it by hand</small>
+			<div class="socials">
+				<span>Contact me:</span>
+				<a href="https://twitter.com/EmilBjorkeng">
+					<i class="fa fa-twitter"></i>
+				</a>
+				<a href="https://github.com/EmilBjorkeng">
+					<i class="fa fa-github"></i>
+				</a>
+			</div>
+		</div>
 	</body>
 </html>
