--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
 		<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
-		
 	</head>
 	<body>
 		<!--Header-->
@@ -31,6 +30,7 @@
 		</div>
 		<!--Banner-->
 		<div class="banner">
+			<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
 			<h1>Student and freetime programmer</h1>
 			<a onclick="window.scroll({top:innerHeight, left:0, behavior:'smooth'})" class="arrow">
 				<div class="arrow-down"></div>
@@ -81,6 +81,7 @@
 		</div>
 		<hr>
 		<div style="width: 100%; height: 600px;"></div>
+		<!--Footer-->
 		<div class="footer">
 			<span>Powered by: Me</span>
 			<small>I wrote it by hand</small>
@@ -93,6 +94,9 @@
 					<i class="fa fa-github"></i>
 				</a>
 			</div>
+			<a class="up-scroller" onclick="window.scroll({top:0, left:0, behavior:'smooth'})">
+				<div class="the-pointer"></div>
+			</a>
 		</div>
 	</body>
 </html>
