--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
 		<title>Main Page</title>
 		<link rel = "icon" type = "image/png" href ="https://avatars.githubusercontent.com/u/100360572?v=4" />
 		<link rel="stylesheet" href="style.css" type="text/css">
+		<link rel="stylesheet" href="header.css" type="text/css">
+		<link rel="stylesheet" href="menu.css" type="text/css">
+		<link rel="stylesheet" href="banner.css" type="text/css">
+		<link rel="stylesheet" href="collection.css" type="text/css">
+		<link rel="stylesheet" href="footer.css" type="text/css">
 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet">
-		<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	</head>
 	<body>
 		<!--Header-->
@@ -81,6 +86,12 @@
 		</div>
 		<hr>
 		<div style="width: 100%; height: 600px;"></div>
+		<!--Info-->
+		<div class="info">
+			<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+			<h2>Text</h2>
+			<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda molestias voluptates rem officia cum sunt qui! Tempora voluptatum voluptates rem rerum vitae temporibus? Aliquid recusandae quidem voluptatem voluptates non est modi, consequuntur minima. Esse accusamus corporis porro! Velit in non dicta accusantium mollitia error sequi perspiciatis quod quibusdam dolorem veritatis vero nemo consectetur a optio labore voluptatibus neque fuga perferendis deserunt est, eos veniam! Quas quia excepturi corrupti modi aperiam voluptates similique ex laborum beatae.</span>
+		</div>
 		<!--Footer-->
 		<div class="footer">
 			<span>Powered by: Me</span>
