Fixed up the collection

--- a/index.html
+++ b/index.html
@@ -41,51 +41,52 @@
 				<div class="arrow-down"></div>
 			</a>
 		</div>
-		<h1 class="title">What I have and still am working on</h1>
-		<!--Showcase-->
-		<ul class="collection">
-			<li>
-				<a href="">
-					<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
-					<h3>Text</h3>
-				</a>
-			</li>
-			<li>
-				<a href="">
-					<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
-					<h3>Text</h3>
-				</a>
-			</li>
-			<li>
-				<a href="">
-					<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
-					<h3>Text</h3>
-				</a>
-			</li>
-			<li>
-				<a href="">
-					<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
-					<h3>Text</h3>
-				</a>
-			</li>
-			<li>
-				<a href="">
-					<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
-					<h3>Text</h3>
-				</a>
-			</li>
-			<li>
-				<a href="">
-					<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
-					<h3>Text</h3>
-				</a>
-			</li>
-		</ul>
-		<div class="show-button">
-			<a href="">Show all projects</a>
+		<div class="collection-section">
+			<h1 class="title">What I have and still am working on</h1>
+			<!--Collection-->
+			<ul class="collection">
+				<li>
+					<a href="">
+						<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+						<h3>Text</h3>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+						<h3>Text</h3>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+						<h3>Text</h3>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+						<h3>Text</h3>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+						<h3>Text</h3>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+						<h3>Text</h3>
+					</a>
+				</li>
+			</ul>
+			<div class="show-button">
+				<a href="">Show all projects</a>
+			</div>
 		</div>
 		<hr>
-		<div style="width: 100%; height: 600px;"></div>
 		<!--Info-->
 		<div class="info">
 			<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
