Added about me section to frontpage and made a css folder

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Main Page</title>
 		<link rel = "icon" type = "image/png" href ="https://avatars.githubusercontent.com/u/100360572?v=4" />
-		<link rel="stylesheet" href="style.css" type="text/css">
-		<link rel="stylesheet" href="header.css" type="text/css">
-		<link rel="stylesheet" href="menu.css" type="text/css">
-		<link rel="stylesheet" href="banner.css" type="text/css">
-		<link rel="stylesheet" href="collection.css" type="text/css">
-		<link rel="stylesheet" href="footer.css" type="text/css">
+		<link rel="stylesheet" href="css/style.css" type="text/css">
+		<link rel="stylesheet" href="css/header.css" type="text/css">
+		<link rel="stylesheet" href="css/menu.css" type="text/css">
+		<link rel="stylesheet" href="css/banner.css" type="text/css">
+		<link rel="stylesheet" href="css/collection.css" type="text/css">
+		<link rel="stylesheet" href="css/footer.css" type="text/css">
+		<link rel="stylesheet" href="css/about.css" type="text/css">
 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,9 +42,9 @@
 				<div class="arrow-down"></div>
 			</a>
 		</div>
+		<!--Collection-->
 		<div class="collection-section">
 			<h1 class="title">What I have and still am working on</h1>
-			<!--Collection-->
 			<ul class="collection">
 				<li>
 					<a href="">
@@ -87,12 +88,17 @@
 			</div>
 		</div>
 		<hr>
-		<!--Info-->
-		<div class="info">
+		<!--About me-->
+		<div class="about-me">
 			<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
-			<h2>Text</h2>
-			<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda molestias voluptates rem officia cum sunt qui! Tempora voluptatum voluptates rem rerum vitae temporibus? Aliquid recusandae quidem voluptatem voluptates non est modi, consequuntur minima. Esse accusamus corporis porro! Velit in non dicta accusantium mollitia error sequi perspiciatis quod quibusdam dolorem veritatis vero nemo consectetur a optio labore voluptatibus neque fuga perferendis deserunt est, eos veniam! Quas quia excepturi corrupti modi aperiam voluptates similique ex laborum beatae.</span>
+			<!--Text part-->
+			<div class="text">
+				<h2>Title</h2>
+				<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda molestias voluptates rem officia cum sunt qui! Tempora voluptatum voluptates rem rerum vitae temporibus? Aliquid recusandae quidem voluptatem voluptates non est modi, consequuntur minima. Esse accusamus corporis porro! Velit in non dicta accusantium mollitia error sequi perspiciatis quod quibusdam dolorem veritatis vero nemo consectetur a optio labore voluptatibus neque fuga perferendis deserunt est, eos veniam! Quas quia excepturi corrupti modi aperiam voluptates similique ex laborum beatae.</span>
+				<a href="">Read more</a>
+			</div>
 		</div>
+		<hr>
 		<!--Footer-->
 		<div class="footer">
 			<span>Powered by: Me</span>
