--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Main Page</title>
 		<link rel = "icon" type = "image/png" href ="https://avatars.githubusercontent.com/u/100360572?v=4" />
 		<link rel="stylesheet" href="css/style.css" type="text/css">
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="css/collection.css" type="text/css">
 		<link rel="stylesheet" href="css/footer.css" type="text/css">
 		<link rel="stylesheet" href="css/about.css" type="text/css">
+		<link rel="stylesheet" href="css/doc.css" type="text/css">
 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,10 +29,9 @@
 			</div>
 			<!--Menu-->
 			<div class="menu">
-				<a href="" class="active">Home</a>
-				<a href="">Projects</a>
+				<a href="/" class="active">Home</a>
+				<a href="/projects/">Projects</a>
 				<a href="">About Me</a>
-				<a href="">Documentation</a>
 			</div>
 		</div>
 		<!--Banner-->
@@ -84,7 +84,7 @@
 				</li>
 			</ul>
 			<div class="show-button">
-				<a href="">Show all projects</a>
+				<a href="/projects/">Show all projects</a>
 			</div>
 		</div>
 		<hr>
@@ -93,7 +93,7 @@
 			<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
 			<!--Text part-->
 			<div class="text">
-				<h2>Title</h2>
+				<h2>About me</h2>
 				<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda molestias voluptates rem officia cum sunt qui! Tempora voluptatum voluptates rem rerum vitae temporibus? Aliquid recusandae quidem voluptatem voluptates non est modi, consequuntur minima. Esse accusamus corporis porro! Velit in non dicta accusantium mollitia error sequi perspiciatis quod quibusdam dolorem veritatis vero nemo consectetur a optio labore voluptatibus neque fuga perferendis deserunt est, eos veniam! Quas quia excepturi corrupti modi aperiam voluptates similique ex laborum beatae.</span>
 				<a href="">Read more</a>
 			</div>
