Added projects page

--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Main Page</title>
 		<link rel = "icon" type = "image/png" href ="https://avatars.githubusercontent.com/u/100360572?v=4" />
-		<link rel="stylesheet" href="css/style.css" type="text/css">
-		<link rel="stylesheet" href="css/header.css" type="text/css">
-		<link rel="stylesheet" href="css/menu.css" type="text/css">
-		<link rel="stylesheet" href="css/banner.css" type="text/css">
-		<link rel="stylesheet" href="css/collection.css" type="text/css">
-		<link rel="stylesheet" href="css/footer.css" type="text/css">
-		<link rel="stylesheet" href="css/about.css" type="text/css">
-		<link rel="stylesheet" href="css/doc.css" type="text/css">
+		<link rel="stylesheet" href="/globalcss/body.css" type="text/css">
+		<link rel="stylesheet" href="/globalcss/header.css" type="text/css">
+		<link rel="stylesheet" href="/globalcss/menu.css" type="text/css">
+		<link rel="stylesheet" href="/globalcss/banner.css" type="text/css">
+		<link rel="stylesheet" href="/globalcss/box.css" type="text/css">
+		<link rel="stylesheet" href="/globalcss/footer.css" type="text/css">
+		<link rel="stylesheet" href="/style.css" type="text/css">
 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,10 +22,10 @@
 		<!--Header-->
 		<div class="header">
 			<!--Name-->
-			<div class="name">
+			<a href="/" class="name">
 				<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
 				<h3>Emil Bjørkeng</h3>
-			</div>
+			</a>
 			<!--Menu-->
 			<div class="menu">
 				<a href="/" class="active">Home</a>
@@ -89,7 +88,7 @@
 		</div>
 		<hr>
 		<!--About me-->
-		<div class="about-me">
+		<div class="box">
 			<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
 			<!--Text part-->
 			<div class="text">
