Added Gregs Adventure

--- a/projects/gregs-adventure/index.html
+++ b/projects/gregs-adventure/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Main Page</title>
+		<title>Gregs Adventure</title>
 		<link rel = "icon" type = "image/png" href ="https://avatars.githubusercontent.com/u/100360572?v=4" />
 		<link rel="stylesheet" href="/globalcss/body.css" type="text/css">
 		<link rel="stylesheet" href="/globalcss/header.css" type="text/css">
@@ -11,93 +11,42 @@
 		<link rel="stylesheet" href="/globalcss/banner.css" type="text/css">
 		<link rel="stylesheet" href="/globalcss/box.css" type="text/css">
 		<link rel="stylesheet" href="/globalcss/footer.css" type="text/css">
-		<link rel="stylesheet" href="/globalcss/hr.css" type="text/css">
-		<link rel="stylesheet" href="/style.css" type="text/css">
+		<link rel="stylesheet" href="/projects/gregs-adventure/style.css" type="text/css">
 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	</head>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    </head>
 	<body>
-		<!--Header-->
+        <!--Header-->
 		<div class="header">
 			<!--Name-->
 			<a href="/" class="name">
-				<img src="https://avatars.githubusercontent.com/u/100360572?v=4" alt="My Profile Picture">
+                <img src="https://avatars.githubusercontent.com/u/100360572?v=4" alt="My Profile Picture">
 				<h3>Emil Bjørkeng</h3>
-			</a>
+            </a>
 			<!--Menu-->
 			<div class="menu">
-				<a href="/" class="active">Home</a>
-				<a href="/projects/">Projects</a>
+				<a href="/">Home</a>
+				<a href="/projects/" class="active">Projects</a>
 				<a href="">About Me</a>
 			</div>
 		</div>
-		<!--Banner-->
-		<div class="banner">
-			<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
-			<h1>Student and freetime programmer</h1>
-			<a onclick="window.scroll({top:innerHeight, left:0, behavior:'smooth'})" class="arrow">
-				<div class="arrow-down"></div>
-			</a>
+        <!--Small Banner-->
+		<div class="banner small-banner">
+			<img src="/images/gregs-adventure-banner.png">
+			<h1>Greg's Adventure</h1>
 		</div>
-		<!--Collection-->
-		<div class="collection-section">
-			<h1 class="title">What I have and still am working on</h1>
-			<ul class="collection">
-				<li>
-					<a href="/projects/gregs-adventure/">
-						<img src="/images/gregs-adventure.png" alt="Picture of Greg's Adventure">
-						<h3>Greg's Adventure</h3>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
-						<h3>Text</h3>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
-						<h3>Text</h3>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
-						<h3>Text</h3>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
-						<h3>Text</h3>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
-						<h3>Text</h3>
-					</a>
-				</li>
-			</ul>
-			<div class="show-button">
-				<a href="/projects/">Show all projects</a>
-			</div>
-		</div>
-		<hr>
-		<!--About me-->
+		<!--The Code-->
 		<div class="box">
 			<div class="img-container">
-				<img class="w" src="https://avatars.githubusercontent.com/u/100360572?v=4">
+				<img class="h" src="/images/greg-code.png" alt="Some code from Gregs adventure">
 			</div>
 			<!--Text part-->
 			<div class="text">
-				<h2>About me</h2>
+				<h2>About the code</h2>
 				<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda molestias voluptates rem officia cum sunt qui! Tempora voluptatum voluptates rem rerum vitae temporibus? Aliquid recusandae quidem voluptatem voluptates non est modi, consequuntur minima. Esse accusamus corporis porro! Velit in non dicta accusantium mollitia error sequi perspiciatis quod quibusdam dolorem veritatis vero nemo consectetur a optio labore voluptatibus neque fuga perferendis deserunt est, eos veniam! Quas quia excepturi corrupti modi aperiam voluptates similique ex laborum beatae.</span>
-				<a href="">Read more</a>
 			</div>
 		</div>
 		<!--Footer-->
@@ -117,5 +66,5 @@
 				<div class="the-pointer"></div>
 			</a>
 		</div>
-	</body>
+    </body>
 </html>
