--- a/projects/index.html
+++ b/projects/index.html
@@ -11,7 +11,8 @@
         <link rel="stylesheet" href="/globalcss/banner.css" type="text/css">
         <link rel="stylesheet" href="/globalcss/box.css" type="text/css">
         <link rel="stylesheet" href="/globalcss/footer.css" type="text/css">
-        <link rel="stylesheet" href="/style.css" type="text/css">
+		<link rel="stylesheet" href="/globalcss/hr.css" type="text/css">
+        <link rel="stylesheet" href="/projects/style.css" type="text/css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,7 +24,7 @@
 		<div class="header">
 			<!--Name-->
 			<a href="/" class="name">
-                <img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+                <img src="https://avatars.githubusercontent.com/u/100360572?v=4" alt="My Profile Picture">
 				<h3>Emil Bjørkeng</h3>
             </a>
 			<!--Menu-->
@@ -40,18 +41,22 @@
 		</div>
         <!--Name-->
         <div class="box right-box">
-			<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+			<div class="img-container">
+				<img class="w" src="/images/gregs-adventure.png" alt="Picture of Greg's Adventure">
+			</div>
 			<!--Text part-->
 			<div class="text">
-				<h2>Title</h2>
-				<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda molestias voluptates rem officia cum sunt qui! Tempora voluptatum voluptates rem rerum vitae temporibus? Aliquid recusandae quidem voluptatem voluptates non est modi, consequuntur minima. Esse accusamus corporis porro! Velit in non dicta accusantium mollitia error sequi perspiciatis quod quibusdam dolorem veritatis vero nemo consectetur a optio labore voluptatibus neque fuga perferendis deserunt est, eos veniam! Quas quia excepturi corrupti modi aperiam voluptates similique ex laborum beatae.</span>
-				<a href="">Read more</a>
+				<h2>Greg's Adventure</h2>
+				<span>Greg's Adventure is a small project I am working on for fun. I wanted to try out some pixel art (I am not very good at it) so I made a fun little character (greg) and a friend of me was like "You have to make a game out of that". So I did. I desided to make it in python with pygame because its quite easy. I made my own "game engine" with my own screne manager because I like making things like that. The project is partly a meme and partly a way for me to have a hobby project to work on when I am bored. I also get the chance to make "advanced" things like the scene manager.</span>
+				<a href="/projects/gregs-adventure/">Read more</a>
 			</div>
 		</div>
         <hr>
         <!--Name-->
         <div class="box">
-			<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+			<div class="img-container">
+				<img class="w" src="https://avatars.githubusercontent.com/u/100360572?v=4">
+			</div>
 			<!--Text part-->
 			<div class="text">
 				<h2>Title</h2>
@@ -62,7 +67,9 @@
         <hr>
         <!--Name-->
         <div class="box right-box">
-			<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+			<div class="img-container">
+				<img class="w" src="https://avatars.githubusercontent.com/u/100360572?v=4">
+			</div>
 			<!--Text part-->
 			<div class="text">
 				<h2>Title</h2>
@@ -73,7 +80,9 @@
         <hr>
         <!--Name-->
         <div class="box">
-			<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+			<div class="img-container">
+				<img class="w" src="https://avatars.githubusercontent.com/u/100360572?v=4">
+			</div>
 			<!--Text part-->
 			<div class="text">
 				<h2>Title</h2>
@@ -84,7 +93,9 @@
         <hr>
         <!--Name-->
         <div class="box right-box">
-			<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+			<div class="img-container">
+				<img class="w" src="https://avatars.githubusercontent.com/u/100360572?v=4">
+			</div>
 			<!--Text part-->
 			<div class="text">
 				<h2>Title</h2>
@@ -95,7 +106,9 @@
         <hr>
         <!--Name-->
         <div class="box">
-			<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+			<div class="img-container">
+				<img class="w" src="https://avatars.githubusercontent.com/u/100360572?v=4">
+			</div>
 			<!--Text part-->
 			<div class="text">
 				<h2>Title</h2>
