Added About Me page

--- a/about/index.html
+++ b/about/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8" />
+    <head>
+        <meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Gregs Adventure</title>
+		<title>Main Page</title>
 		<link rel = "icon" type = "image/png" href ="https://avatars.githubusercontent.com/u/100360572?v=4" />
-		<link rel="stylesheet" href="/globalcss/body.css" type="text/css">
+        <link rel="stylesheet" href="/globalcss/body.css" type="text/css">
 		<link rel="stylesheet" href="/globalcss/header.css" type="text/css">
-		<link rel="stylesheet" href="/globalcss/menu.css" type="text/css">
-		<link rel="stylesheet" href="/globalcss/banner.css" type="text/css">
-		<link rel="stylesheet" href="/globalcss/box.css" type="text/css">
-		<link rel="stylesheet" href="/globalcss/footer.css" type="text/css">
-		<link rel="stylesheet" href="/projects/gregs-adventure/style.css" type="text/css">
+        <link rel="stylesheet" href="/globalcss/menu.css" type="text/css">
+        <link rel="stylesheet" href="/globalcss/banner.css" type="text/css">
+        <link rel="stylesheet" href="/globalcss/box.css" type="text/css">
+        <link rel="stylesheet" href="/globalcss/footer.css" type="text/css">
+        <link rel="stylesheet" href="/projects/style.css" type="text/css">
 
-		<link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
-	<body>
+    <body>
         <!--Header-->
 		<div class="header">
 			<!--Name-->
@@ -29,27 +29,27 @@
 			<!--Menu-->
 			<div class="menu">
 				<a href="/">Home</a>
-				<a href="/projects/" class="active">Projects</a>
-				<a href="/about/">About Me</a>
+				<a href="/projects/">Projects</a>
+				<a href="/about/" class="active">About Me</a>
 			</div>
 		</div>
         <!--Small Banner-->
 		<div class="banner small-banner">
-			<img src="/images/gregs-adventure-banner.png">
-			<h1>Greg's Adventure</h1>
+			<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+			<h1>About Me</h1>
 		</div>
-		<!--The Code-->
+		<!--About me-->
 		<div class="box">
 			<div class="img-container">
-				<img class="h" src="/images/greg-code.png" alt="Some code from Gregs adventure">
+				<img class="w" src="https://avatars.githubusercontent.com/u/100360572?v=4">
 			</div>
 			<!--Text part-->
 			<div class="text">
-				<h2>About the code</h2>
+				<h2>About me</h2>
 				<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda molestias voluptates rem officia cum sunt qui! Tempora voluptatum voluptates rem rerum vitae temporibus? Aliquid recusandae quidem voluptatem voluptates non est modi, consequuntur minima. Esse accusamus corporis porro! Velit in non dicta accusantium mollitia error sequi perspiciatis quod quibusdam dolorem veritatis vero nemo consectetur a optio labore voluptatibus neque fuga perferendis deserunt est, eos veniam! Quas quia excepturi corrupti modi aperiam voluptates similique ex laborum beatae.</span>
 			</div>
 		</div>
-		<!--Footer-->
+        <!--Footer-->
 		<div class="footer">
 			<span>Powered by: Me</span>
 			<small>I wrote it by hand</small>
