--- a/projects/index.html
+++ b/projects/index.html
@@ -31,7 +31,7 @@
 			<div class="menu">
 				<a href="/">Home</a>
 				<a href="/projects/" class="active">Projects</a>
-				<a href="">About Me</a>
+				<a href="/about/">About Me</a>
 			</div>
 		</div>
         <!--Small Banner-->
