--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<div class="menu">
 				<a href="/" class="active">Home</a>
 				<a href="/projects/">Projects</a>
-				<a href="">About Me</a>
+				<a href="/about/">About Me</a>
 			</div>
 		</div>
 		<!--Banner-->
