Added about me text and fixed gregs text

--- a/projects/index.html
+++ b/projects/index.html
@@ -47,7 +47,7 @@
 			<!--Text part-->
 			<div class="text">
 				<h2>Greg's Adventure</h2>
-				<span>Greg's Adventure is a small project I am working on for fun. I wanted to try out some pixel art (I am not very good at it) so I made a fun little character (greg) and a friend of me was like "You have to make a game out of that". So I did. I desided to make it in python with pygame because its quite easy. I made my own "game engine" with my own screne manager because I like making things like that. The project is partly a meme and partly a way for me to have a hobby project to work on when I am bored. I also get the chance to make "advanced" things like the scene manager.</span>
+				<span>Greg's Adventure is a small project I am working on for fun. I wanted to try out some pixel art so I made a fun little character (Greg) and a friend of mine was like "You have to make a game out of that". So I did. I decided to make it in Python with Pygame because its quite easy. I made my own "game engine" with my own screne manager because I like making things like that. The project is partly a meme and partly a way for me to have a hobby project to work on when I am bored. I also get the chance to make "advanced" things like the scene manager.</span>
 				<a href="/projects/gregs-adventure/">Read more</a>
 			</div>
 		</div>
