--- a/about/index.html
+++ b/about/index.html
@@ -44,9 +44,9 @@
 				<img class="w" src="https://avatars.githubusercontent.com/u/100360572?v=4">
 			</div>
 			<!--Text part-->
-			<div class="text">
+			<div class="text" style="transform: translate(0, -30px);">
 				<h2>About me</h2>
-				<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda molestias voluptates rem officia cum sunt qui! Tempora voluptatum voluptates rem rerum vitae temporibus? Aliquid recusandae quidem voluptatem voluptates non est modi, consequuntur minima. Esse accusamus corporis porro! Velit in non dicta accusantium mollitia error sequi perspiciatis quod quibusdam dolorem veritatis vero nemo consectetur a optio labore voluptatibus neque fuga perferendis deserunt est, eos veniam! Quas quia excepturi corrupti modi aperiam voluptates similique ex laborum beatae.</span>
+				<span>Hello, I'm Emil. I'm 17 years old and live in Norway. My hobbies include playing and making games and making websites. I am not what you would consider a productive guy. I often get distracted by other things and often leave project half finished. There is no problems with this because I don't do this for work or school. My project and purely for my own enjoyment (I like to have project to work on when I'm bored). I would say my programming skills is in the late begginer to early intermediate range depending on what language and who you ask, but I'm constantly experimenmting and learning.</span>
 			</div>
 		</div>
         <!--Footer-->
