--- a/about/index.html
+++ b/about/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Main Page</title>
+		<title>About Me</title>
 		<link rel = "icon" type = "image/png" href ="https://avatars.githubusercontent.com/u/100360572?v=4" />
-        <link rel="stylesheet" href="/globalcss/body.css" type="text/css">
+        <link rel="stylesheet" href="/globalcss/general.css" type="text/css">
 		<link rel="stylesheet" href="/globalcss/header.css" type="text/css">
         <link rel="stylesheet" href="/globalcss/menu.css" type="text/css">
         <link rel="stylesheet" href="/globalcss/banner.css" type="text/css">
@@ -40,11 +40,8 @@
 		</div>
 		<!--About me-->
 		<div class="box">
-			<div class="img-container">
-				<img class="w" src="https://avatars.githubusercontent.com/u/100360572?v=4">
-			</div>
-			<!--Text part-->
-			<div class="text" style="transform: translate(0, -30px);">
+			<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+			<div class="text big-text">
 				<h2>About me</h2>
 				<span>Hello, I'm Emil. I'm 17 years old and live in Norway. My hobbies include playing and making games and making websites. I am not what you would consider a productive guy. I often get distracted by other things and often leave project half finished. There is no problems with this because I don't do this for work or school. My project and purely for my own enjoyment (I like to have project to work on when I'm bored). I would say my programming skills is in the late begginer to early intermediate range depending on what language and who you ask, but I'm constantly experimenmting and learning.</span>
 			</div>
