--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Main Page</title>
 		<link rel = "icon" type = "image/png" href ="https://avatars.githubusercontent.com/u/100360572?v=4" />
-		<link rel="stylesheet" href="/globalcss/body.css" type="text/css">
+		<link rel="stylesheet" href="/globalcss/general.css" type="text/css">
 		<link rel="stylesheet" href="/globalcss/header.css" type="text/css">
-		<link rel="stylesheet" href="/globalcss/menu.css" type="text/css">
 		<link rel="stylesheet" href="/globalcss/banner.css" type="text/css">
 		<link rel="stylesheet" href="/globalcss/box.css" type="text/css">
 		<link rel="stylesheet" href="/globalcss/footer.css" type="text/css">
@@ -42,58 +41,51 @@
 				<div class="arrow-down"></div>
 			</a>
 		</div>
+		<h1 class="title">What I have and still am working on</h1>
 		<!--Collection-->
-		<div class="collection-section">
-			<h1 class="title">What I have and still am working on</h1>
-			<ul class="collection">
-				<li>
-					<a href="/projects/gregs-adventure/">
-						<img src="/images/gregs-adventure.png" alt="Picture of Greg's Adventure">
-						<h3>Greg's Adventure</h3>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
-						<h3>Text</h3>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
-						<h3>Text</h3>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
-						<h3>Text</h3>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
-						<h3>Text</h3>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
-						<h3>Text</h3>
-					</a>
-				</li>
-			</ul>
-			<div class="show-button">
-				<a href="/projects/">Show all projects</a>
-			</div>
-		</div>
-		<hr>
+		<ul class="collection">
+			<li>
+				<a href="/projects/gregs-adventure/">
+					<img src="/images/gregs-adventure.png" alt="Picture of Greg's Adventure">
+					<h3>Greg's Adventure</h3>
+				</a>
+			</li>
+			<li>
+				<a href="">
+					<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+					<h3>Text</h3>
+				</a>
+			</li>
+			<li>
+				<a href="">
+					<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+					<h3>Text</h3>
+				</a>
+			</li>
+			<li>
+				<a href="">
+					<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+					<h3>Text</h3>
+				</a>
+			</li>
+			<li>
+				<a href="">
+					<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+					<h3>Text</h3>
+				</a>
+			</li>
+			<li>
+				<a href="">
+					<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+					<h3>Text</h3>
+				</a>
+			</li>
+		</ul>
+		<p class="show-all-btn"><a href="/projects/">Show all projects</a></p>
+		<hr class="faded-hr">
 		<!--About me-->
 		<div class="box">
-			<div class="img-container">
-				<img class="w" src="https://avatars.githubusercontent.com/u/100360572?v=4">
-			</div>
-			<!--Text part-->
+			<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
 			<div class="text">
 				<h2>About me</h2>
 				<span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda molestias voluptates rem officia cum sunt qui! Tempora voluptatum voluptates rem rerum vitae temporibus? Aliquid recusandae quidem voluptatem voluptates non est modi, consequuntur minima. Esse accusamus corporis porro! Velit in non dicta accusantium mollitia error sequi perspiciatis quod quibusdam dolorem veritatis vero nemo consectetur a optio labore voluptatibus neque fuga perferendis deserunt est, eos veniam! Quas quia excepturi corrupti modi aperiam voluptates similique ex laborum beatae.</span>
