--- a/projects/gregs-adventure/index.html
+++ b/projects/gregs-adventure/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Gregs Adventure</title>
+		<title>Greg's Adventure</title>
 		<link rel = "icon" type = "image/png" href ="https://avatars.githubusercontent.com/u/100360572?v=4" />
-		<link rel="stylesheet" href="/globalcss/body.css" type="text/css">
+		<link rel="stylesheet" href="/globalcss/general.css" type="text/css">
 		<link rel="stylesheet" href="/globalcss/header.css" type="text/css">
 		<link rel="stylesheet" href="/globalcss/menu.css" type="text/css">
 		<link rel="stylesheet" href="/globalcss/banner.css" type="text/css">
@@ -29,7 +29,7 @@
 			<!--Menu-->
 			<div class="menu">
 				<a href="/">Home</a>
-				<a href="/projects/" class="active">Projects</a>
+				<a href="/projects/">Projects</a>
 				<a href="/about/">About Me</a>
 			</div>
 		</div>
