--- a/projects/index.html
+++ b/projects/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Main Page</title>
+		<title>My Projects</title>
 		<link rel = "icon" type = "image/png" href ="https://avatars.githubusercontent.com/u/100360572?v=4" />
-        <link rel="stylesheet" href="/globalcss/body.css" type="text/css">
+        <link rel="stylesheet" href="/globalcss/general.css" type="text/css">
 		<link rel="stylesheet" href="/globalcss/header.css" type="text/css">
         <link rel="stylesheet" href="/globalcss/menu.css" type="text/css">
         <link rel="stylesheet" href="/globalcss/banner.css" type="text/css">
@@ -40,7 +40,7 @@
 			<h1>My Projects</h1>
 		</div>
         <!--Name-->
-        <div class="box right-box">
+        <div class="box box-right">
 			<div class="img-container">
 				<img class="w" src="/images/gregs-adventure.png" alt="Picture of Greg's Adventure">
 			</div>
@@ -51,7 +51,7 @@
 				<a href="/projects/gregs-adventure/">Read more</a>
 			</div>
 		</div>
-        <hr>
+        <hr class="faded-hr">
         <!--Name-->
         <div class="box">
 			<div class="img-container">
@@ -64,9 +64,9 @@
 				<a href="">Read more</a>
 			</div>
 		</div>
-        <hr>
+        <hr class="faded-hr">
         <!--Name-->
-        <div class="box right-box">
+        <div class="box box-right">
 			<div class="img-container">
 				<img class="w" src="https://avatars.githubusercontent.com/u/100360572?v=4">
 			</div>
@@ -77,7 +77,7 @@
 				<a href="">Read more</a>
 			</div>
 		</div>
-        <hr>
+        <hr class="faded-hr">
         <!--Name-->
         <div class="box">
 			<div class="img-container">
@@ -90,9 +90,9 @@
 				<a href="">Read more</a>
 			</div>
 		</div>
-        <hr>
+        <hr class="faded-hr">
         <!--Name-->
-        <div class="box right-box">
+        <div class="box box-right">
 			<div class="img-container">
 				<img class="w" src="https://avatars.githubusercontent.com/u/100360572?v=4">
 			</div>
@@ -103,7 +103,7 @@
 				<a href="">Read more</a>
 			</div>
 		</div>
-        <hr>
+        <hr class="faded-hr">
         <!--Name-->
         <div class="box">
 			<div class="img-container">
