--- a/index.html
+++ b/index.html
@@ -41,47 +41,48 @@
 				<div class="arrow-down"></div>
 			</a>
 		</div>
-		<h1 class="title">What I have and still am working on</h1>
-		<!--Collection-->
-		<ul class="collection">
-			<li>
-				<a href="/projects/gregs-adventure/">
-					<img src="/images/gregs-adventure.png" alt="Picture of Greg's Adventure">
-					<h3>Greg's Adventure</h3>
-				</a>
-			</li>
-			<li>
-				<a href="">
-					<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
-					<h3>Text</h3>
-				</a>
-			</li>
-			<li>
-				<a href="">
-					<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
-					<h3>Text</h3>
-				</a>
-			</li>
-			<li>
-				<a href="">
-					<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
-					<h3>Text</h3>
-				</a>
-			</li>
-			<li>
-				<a href="">
-					<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
-					<h3>Text</h3>
-				</a>
-			</li>
-			<li>
-				<a href="">
-					<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
-					<h3>Text</h3>
-				</a>
-			</li>
-		</ul>
-		<p class="show-all-btn"><a href="/projects/">Show all projects</a></p>
+		<div class="col-div">
+			<h1 class="col-title">What I have and still am working on</h1>
+			<!--Collection-->
+			<ul class="col">
+				<li>
+					<a href="/projects/gregs-adventure/">
+						<img src="/images/gregs-adventure.png" alt="Picture of Greg's Adventure">
+						<h3>Greg's Adventure</h3>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+						<h3>Text</h3>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+						<h3>Text</h3>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+						<h3>Text</h3>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+						<h3>Text</h3>
+					</a>
+				</li>
+				<li>
+					<a href="">
+						<img src="https://avatars.githubusercontent.com/u/100360572?v=4">
+						<h3>Text</h3>
+					</a>
+				</li>
+			</ul>	
+		</div>
 		<hr class="faded-hr">
 		<!--About me-->
 		<div class="box">
