Fixed focus and footer arrow

--- a/projects/index.html
+++ b/projects/index.html
@@ -129,9 +129,7 @@
 					<i class="fa fa-github"></i>
 				</a>
 			</div>
-			<a class="up-scroller" onclick="window.scroll({top:0, left:0, behavior:'smooth'})">
-				<div class="the-pointer"></div>
-			</a>
+			<a class="scroller" onclick="window.scroll({top:0, left:0, behavior:'smooth'})"></a>
 		</div>
     </body>
 </html>
